@@ -36,6 +36,7 @@ xx/xx/2006 - 1.13.1-WIP
 	  and ntfs_inode_badclus_bad() functions, and convert all copy-pastes
 	  to use them.  (Szaka)
 	- Fix all incorrect getopt_long() return value usages.  (Szaka)
+	- Fix VCN size in the index.c.  (Anton, Yura)
 
 27/02/2006 - 1.13.0 - Lots and lots and lots of fixes and enhancements.
 
